fix: remove x-direction overflow; adjust modal responsiveness

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,7 @@
+html,body {
+    overflow-x: hidden; 
+}
+
 .resume-section {
     padding-left: 0;
     padding-top: 0;
@@ -96,8 +100,10 @@
     color:#3a18d2 !important;
 }
 
-.modal-dialog {
-    min-width: 680px !important;
+@media screen and (max-width:992px) {
+    .modal-dialog {
+            min-width: 90vw;
+    }
 }
 
 .dev-icons div {
